# async_auto_traits

./: Cargo.toml
src/: assert.rs  auto_trait_list.rs  lib.rs  set.rs
