[package]
name = "async_auto_traits"
description = "Assert and mask auto traits in `async fn` return types"
repository = "https://github.com/jplatte/async_auto_traits"
version = "0.2.1"
authors = ["Jonas Platte <jplatte@posteo.de>"]
license = "MIT"
edition = "2018"
include = ["src/**/*", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["parsing", "full"] }
